# gstreamer-sharp

./: .gitmodules  README.md  build.cake  configure.ac  gstreamer-sharp.sln  meson.build  nuget.py
CakeScripts/: Settings.cs
Source/Libs/: GstSharp.sln
Tests/: PipelineTests.cs  SdpTests.cs  TestBase.cs  meson.build
Tests/GstSharp.Tests/: GstSharp.Tests.csproj  packages.config
Tests/GstSharp.Tests/Properties/: AssemblyInfo.cs
samples/: meson.build
sources/: gstreamer-sharp-api.raw  gstreamer-sharp.metadata  meson.build
subprojects/: gtk-sharp.wrap
